# ModernRobotics

./: CMakeLists.txt
examples/: CMakeLists.txt  MR_math.cpp
inc/: MR.h
src/: CMakeLists.txt  MR.cpp
